--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 name: arma3
-description: A Helm chart for ARMA 3 on LinuxGSM
+description: A Helm chart for ARMA 3 on LinuxGSM.
 type: application
 maintainers:
 - name: Britton Hayes
   url: https://github.com/brittonhayes
-version: 0.1.1
+version: 0.1.3
 appVersion: "1.16.0"
 keywords:
 - arma3
