--- a/charts/templates/configmap-server.yaml
+++ b/charts/templates/configmap-server.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "arma3.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.deploymentAnnotations }}
@@ -217,4 +218,8 @@ data:
     headlessClients[]={ {{ join "," .Values.config.headlessClients }} };
     localClient[]={ {{join "," .Values.config.headlessClients}} };
     {{- end }}
+
+  common.cfg: |-
+    steamuser={{ include "steamUser" . | quote }}
+    steamuser={{ include "steamPassword" . | quote }}
 ---
