--- a/charts/templates/configmap-tunnel.yaml
+++ b/charts/templates/configmap-tunnel.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "arma3.fullname" . }}-tunnel
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.deploymentAnnotations }}
