--- a/charts/templates/headlessclient.yaml
+++ b/charts/templates/headlessclient.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "arma3.fullname" . }}-headlessclient
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.deploymentAnnotations }}
