--- a/charts/templates/service-rsync.yaml
+++ b/charts/templates/service-rsync.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "arma3.fullname" . }}-rsyncd
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
