--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "arma3.fullname" . }}
+  namespace: {{ .Release.Namespace }} 
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
