--- a/charts/templates/servicemonitor.yaml
+++ b/charts/templates/servicemonitor.yaml
@@ -3,6 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "arma3.fullname" . }}-metrics
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "arma3.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
