--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -94,7 +94,7 @@ persistence:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    # storageClass: "-"
+    storageClass: "-"
 
     ## A manually managed Persistent Volume and Claim
     ## Requires persistence.enabled: true
