--- a/charts/templates/configmap-server.yaml
+++ b/charts/templates/configmap-server.yaml
@@ -10,87 +10,6 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 data:
-  arma3server.network.cfg: |-
-    // ****************************************************************************
-    //     Arma 3 - network.cfg                                                   *
-    // ****************************************************************************
-
-    // Defines network tuning parameters
-    //
-    // This file is to be passed to the -cfg parameter on the command line for the server
-    // See http://community.bistudio.com/wiki/basic.cfg
-    // The following settings are the suggested settings
-
-    // BANDWIDTH SETTINGS
-
-    // Bandwidth the server is guaranteed to have (in bps)
-    // General guideline is NumberOfPlayers * 256kb
-    // Default: 131072
-    MinBandwidth=5120000;
-    // Bandwidth the server can never go above (in bps)
-    // For a single server, use full network speed; decrease when running multiple servers
-    MaxBandwidth=10240000;
-
-    // PACKET SETTINGS
-
-    // Maximum number of packets per frame.
-    // Increasing the value potentially decreases lag, but increases desync
-    // Default: 128
-    MaxMsgSend=2048;
-    // Maximum payload of guaranteed packet (in b)
-    // Small messages are packed to larger packets
-    // Guaranteed packets are used for non-repetitive events, like shooting
-    // Lower value means more packets are sent, so less events will get combined
-    // Default: 512
-    MaxSizeGuaranteed=512;
-    // Maximum payload of non-guaranteed packet (in b)
-    // Increasing this value may improve bandwidth requirement, but may also increase lag
-    // Largest factor in desync
-    // Guidance is half of MaxSizeGuaranteed
-    // Default: 256
-    MaxSizeNonguaranteed=256;
-    // Maximal size of a packet sent over the network
-    // Only necessary if ISP forces lower packet size and there are connectivity issues
-    // Default: 1400
-    // class sockets{maxPacketSize=1400};
-
-    // SMOOTHNESS SETTINGS
-
-    // Minimal error required to send network updates for far units
-    // Smaller values will make for smoother movement at long ranges, but will increase network traffic
-    // Default: 0.003
-    MinErrorToSend=0.01;
-    // Minimal error required to send network updates for near units
-    // Using larger value can reduce traffic sent for near units
-    // Also controls client to server traffic
-    // Default: 0.01
-    MinErrorToSendNear=0.02;
-
-    // GEOLOCATION SETTINGS
-
-    // Server latitude
-    serverLatitude=52;
-    serverLatitudeAuto=52;
-
-    // Server Longitude
-    serverLongitude=0;
-    serverLongitudeAuto=0;
-    // MISC
-    // View Distance
-    viewDistance=10000;
-
-    // Maximum size (in b) for custom face or sound files
-    // Default: 0
-    MaxCustomFileSize=0;
-    // Server language
-    language="English";
-    steamLanguage="English";
-    // Adapter
-    adapter=-1;
-    // Windowed mode
-    Windowed=0;
-
-    3D_Performance=1.000000;
   arma3server.server.cfg: |-
     // ****************************************************************************
     //     Arma 3 - server.cfg                                                    *
@@ -219,7 +138,132 @@ data:
     localClient[]={ {{join "," .Values.config.headlessClients}} };
     {{- end }}
 
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "arma3.fullname" . }}-common
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "arma3.labels" . | nindent 4 }}
+  {{- with .Values.deploymentAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+data:
   common.cfg: |-
     steamuser={{ include "steamUser" . | quote }}
-    steamuser={{ include "steamPassword" . | quote }}
+    steampass={{ include "steamPassword" . | quote }}
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "arma3.fullname" . }}-env
+  labels:
+    {{- include "arma3.labels" . | nindent 4 }}
+  {{- with .Values.deploymentAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+data:
+  ARMA_CONFIG: main.cfg
+  STEAM_PASSWORD: {{ include "steamPassword" . }}
+  STEAM_USER: {{ include "steamUser" . }}
+  {{- with .Values.config.env }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "arma3.fullname" . }}-network
+  namespace: {{ .Release.Namespace }}
+  labels:
+      {{- include "arma3.labels" . | nindent 4 }}
+    {{- with .Values.deploymentAnnotations }}
+    annotations:
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+data:
+  arma3server.network.cfg: |-
+    // ****************************************************************************
+    //     Arma 3 - network.cfg                                                   *
+    // ****************************************************************************
+
+    // Defines network tuning parameters
+    //
+    // This file is to be passed to the -cfg parameter on the command line for the server
+    // See http://community.bistudio.com/wiki/basic.cfg
+    // The following settings are the suggested settings
+
+    // BANDWIDTH SETTINGS
+
+    // Bandwidth the server is guaranteed to have (in bps)
+    // General guideline is NumberOfPlayers * 256kb
+    // Default: 131072
+    MinBandwidth=5120000;
+    // Bandwidth the server can never go above (in bps)
+    // For a single server, use full network speed; decrease when running multiple servers
+    MaxBandwidth=10240000;
+
+    // PACKET SETTINGS
+
+    // Maximum number of packets per frame.
+    // Increasing the value potentially decreases lag, but increases desync
+    // Default: 128
+    MaxMsgSend=2048;
+    // Maximum payload of guaranteed packet (in b)
+    // Small messages are packed to larger packets
+    // Guaranteed packets are used for non-repetitive events, like shooting
+    // Lower value means more packets are sent, so less events will get combined
+    // Default: 512
+    MaxSizeGuaranteed=512;
+    // Maximum payload of non-guaranteed packet (in b)
+    // Increasing this value may improve bandwidth requirement, but may also increase lag
+    // Largest factor in desync
+    // Guidance is half of MaxSizeGuaranteed
+    // Default: 256
+    MaxSizeNonguaranteed=256;
+    // Maximal size of a packet sent over the network
+    // Only necessary if ISP forces lower packet size and there are connectivity issues
+    // Default: 1400
+    // class sockets{maxPacketSize=1400};
+
+    // SMOOTHNESS SETTINGS
+
+    // Minimal error required to send network updates for far units
+    // Smaller values will make for smoother movement at long ranges, but will increase network traffic
+    // Default: 0.003
+    MinErrorToSend=0.01;
+    // Minimal error required to send network updates for near units
+    // Using larger value can reduce traffic sent for near units
+    // Also controls client to server traffic
+    // Default: 0.01
+    MinErrorToSendNear=0.02;
+
+    // GEOLOCATION SETTINGS
+
+    // Server latitude
+    serverLatitude=52;
+    serverLatitudeAuto=52;
+
+    // Server Longitude
+    serverLongitude=0;
+    serverLongitudeAuto=0;
+    // MISC
+    // View Distance
+    viewDistance=10000;
+
+    // Maximum size (in b) for custom face or sound files
+    // Default: 0
+    MaxCustomFileSize=0;
+    // Server language
+    language="English";
+    steamLanguage="English";
+    // Adapter
+    adapter=-1;
+    // Windowed mode
+    Windowed=0;
+
+    3D_Performance=1.000000;
