--- a/charts/arma3/templates/configmap-server.yaml
+++ b/charts/arma3/templates/configmap-server.yaml
@@ -36,7 +36,7 @@ data:
     passwordAdmin = "{{ include "adminPassword" . }}";
 
     // Auto-admin
-    admins[] = {""};
+    admins[] = { {{ join "," .Values.config.admins }} };
 
     // Server Slots
     maxPlayers = {{ .Values.config.maxPlayers | default 20 }};
