--- a/charts/arma3/templates/service.yaml
+++ b/charts/arma3/templates/service.yaml
@@ -11,36 +11,36 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if eq .Values.service.type "LoadBalancer" }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadbalancerIP: {{ .Values.service.loadbalancerIP }}
-  {{- end }}
-  {{- end }}
   ports:
     - name: udp-1
       port: 2302
       targetPort: 2302
+      nodePort: 32302
       protocol: UDP
     - name: udp-2
       port: 2303
       targetPort: 2303
+      nodePort: 32303
       protocol: UDP
     - name: upd-3
       port: 2304
       targetPort: 2304
+      nodePort: 32304
       protocol: UDP
     - name: upd-4
       port: 2305
       targetPort: 2305
+      nodePort: 32305
       protocol: UDP
     - name: upd-5
       port: 2306
       targetPort: 2306
+      nodePort: 32306
       protocol: UDP
-    # TODO: Should not be public
     - name: metrics
       port: 8000
       targetPort: metrics
+      nodePort: 32307
       protocol: TCP
   selector:
     {{- include "arma3.selectorLabels" . | nindent 4 }}
