feat: release new helm chart version

--- a/charts/arma3/templates/configmap-server.yaml
+++ b/charts/arma3/templates/configmap-server.yaml
@@ -177,7 +177,7 @@ data:
     ## Discord webhook alerts
     {{- if .Values.config.alerts.discord }}
     discordalert="on"
-    discordwebhook={{ .Values.config.alerts.discord }}
+    discordwebhook={{ .Values.config.alerts.discord | quote }}
     {{- end }}
 ---
 apiVersion: v1
